--- a/1b/Dockerfile
+++ b/1b/Dockerfile
@@ -11,6 +11,7 @@ RUN apt-get update && \
     libsm6 \
     libxext6 \
     libxrender1 \
+    libgl1-mesa-glx \
     wget \
     && rm -rf /var/lib/apt/lists/*
 
