--- a/1a/requirements.txt
+++ b/1a/requirements.txt
@@ -2,5 +2,8 @@ opencv-python-headless
 pytesseract
 Pillow
 pdf2image
-ultralytics==8.0.192    # Or compatible YOLO version
-numpy
+ultralytics==8.0.192
+numpy==1.26.4
+
+
+
